<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <EditText
            android:id="@+id/nameUpdate"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_layout"
            android:hint="@string/name"
            android:layout_marginLeft="30sp"
            android:layout_marginRight="30sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <EditText
            android:id="@+id/ageUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/age"
            android:inputType="number"
            android:singleLine="true"
            android:background="@drawable/edit_text_layout"
            android:maxLength="3"
            android:layout_marginLeft="30sp"
            android:layout_marginRight="30sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <EditText
            android:id="@+id/desUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/designation"
            android:background="@drawable/edit_text_layout"
            android:singleLine="true"
            android:layout_marginLeft="30sp"
            android:layout_marginRight="30sp"/>
    </com.google.android.material.textfield.TextInputLayout>


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/addImage"
        android:layout_width="80sp"
        android:layout_height="80sp"
        android:layout_marginTop="20sp"
        android:src="@mipmap/add_picture_round"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/black"
        android:text="@string/add_image"/>


    <Button
        android:id="@+id/btnSaveContact"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:backgroundTint="#5AE305"
        android:text="@string/ok"
        android:textColor="@color/black"
        android:textAllCaps="false" />

</LinearLayout>