<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

      <!--  <FrameLayout
            android:id="@+id/frame"
            android:layout_width="90sp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/editContactImage"
                    android:src="@drawable/edit_image"
                    android:layout_width="75sp"
                    android:layout_height="75sp"
                    android:layout_gravity="center" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:text="@string/edit_image"/>

            </LinearLayout>


        </FrameLayout>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">
                <EditText
                    android:id="@+id/nameUpdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:background="@drawable/edit_text_layout"
                    android:layout_marginLeft="30sp"
                    android:layout_marginRight="30sp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">
                <EditText
                    android:id="@+id/ageUpdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/age"
                    android:inputType="number"
                    android:background="@drawable/edit_text_layout"
                    android:layout_marginLeft="30sp"
                    android:layout_marginRight="30sp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">
                <EditText
                    android:id="@+id/desUpdate"
                    android:layout_width="match_parent"
                    android:background="@drawable/edit_text_layout"
                    android:layout_height="wrap_content"
                    android:hint="@string/designation"
                    android:layout_marginLeft="30sp"
                    android:layout_marginRight="30sp"/>
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/btnSaveContact"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/c_yellow"
                android:text="@string/update"
                android:textColor="@color/black"
                android:textAllCaps="false" />
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>