<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutNote"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_note"
    tools:context=".adapters.MainAdapter"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="10dp">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical">

       <androidx.constraintlayout.widget.ConstraintLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginLeft="5sp"
           android:layout_marginRight="5sp">


           <TextView
               android:id="@+id/titleET"
               android:layout_width="200dp"
               android:layout_height="25sp"
               android:layout_marginStart="20dp"
               android:layout_marginLeft="20dp"
               android:layout_marginTop="10sp"
               android:hint="@string/titleET"
               android:textAllCaps="true"
               android:textColor="@color/black"
               android:textStyle="bold"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent" />

           <TextView
               android:id="@+id/descET"
               android:layout_width="wrap_content"
               android:layout_height="19dp"
               android:layout_marginTop="5dp"
               android:hint="@string/description"
               app:layout_constraintStart_toStartOf="@+id/titleET"
               app:layout_constraintTop_toBottomOf="@+id/titleET" />

           <TextView
               android:id="@+id/dateET"
               android:layout_width="120dp"
               android:layout_height="25sp"
               android:layout_marginTop="5dp"
               android:hint="@string/date_added"
               android:textColor="@color/black_two"
               android:textStyle="italic"
               app:layout_constraintStart_toStartOf="@+id/descET"
               app:layout_constraintTop_toBottomOf="@+id/descET" />

           <ImageView
               android:id="@+id/editIV"
               android:layout_width="25sp"
               android:layout_height="25dp"
               android:layout_gravity="center"
               android:layout_marginTop="5dp"
               android:layout_marginEnd="20dp"
               android:layout_marginRight="20dp"
               android:background="@drawable/edit_option"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintTop_toTopOf="@+id/titleET" />

           <ImageView
               android:id="@+id/deleteIV"
               android:layout_width="25sp"
               android:layout_height="25dp"
               android:layout_gravity="center"
               android:layout_marginTop="5dp"
               android:background="@drawable/delet_option"
               app:layout_constraintBottom_toBottomOf="@+id/dateET"
               app:layout_constraintEnd_toEndOf="@+id/editIV"
               app:layout_constraintStart_toStartOf="@+id/editIV"
               app:layout_constraintTop_toBottomOf="@+id/editIV" />

       </androidx.constraintlayout.widget.ConstraintLayout>

       <View
           android:layout_width="match_parent"
           android:layout_height="10dp" />

   </LinearLayout>

</LinearLayout>