<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".adapters.ContactAdapter"
    android:id="@+id/rlContainer">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/rootContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
            android:background="@drawable/contact_border">

            <FrameLayout
                android:id="@+id/frame"
                android:layout_width="75sp"
                android:layout_height="75sp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/addedImage"
                    android:src="@drawable/image_not_added"
                    android:layout_width="75sp"
                    android:layout_height="75sp"
                    android:layout_gravity="center" />

            </FrameLayout>

            <TextView
                android:id="@+id/addTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="@+id/addNotes"
                app:layout_constraintStart_toStartOf="@+id/addNotes"
                app:layout_constraintTop_toBottomOf="@+id/addNotes" />

            <TextView
                android:id="@+id/nameTV"
                android:layout_width="200dp"
                android:layout_height="30sp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10sp"
                android:hint="@string/name"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/frame"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/ageTV"
                android:layout_width="25dp"
                android:layout_height="19dp"
                android:hint="@string/age"

                android:layout_marginTop="10sp"
                app:layout_constraintStart_toStartOf="@+id/nameTV"
                app:layout_constraintTop_toBottomOf="@+id/nameTV" />

            <TextView
                android:id="@+id/designationTV"
                android:layout_width="120dp"
                android:layout_height="25sp"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp"
                android:hint="@string/designation"
                android:textColor="@color/color_popupmsg"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/ageTV"
                app:layout_constraintTop_toBottomOf="@+id/ageTV" />

            <ImageView
                android:id="@+id/addNotes"
                android:layout_width="35sp"
                android:layout_height="35sp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/add_notes"
                app:layout_constraintEnd_toStartOf="@+id/editIV"
                app:layout_constraintTop_toTopOf="@+id/editIV" />

            <ImageView
                android:id="@+id/editIV"
                android:layout_width="25sp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/edit_option"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/deleteIV"
                android:layout_width="25sp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/delet_option"
                app:layout_constraintBottom_toBottomOf="@+id/addTV"
                app:layout_constraintEnd_toEndOf="@+id/editIV"
                app:layout_constraintTop_toBottomOf="@+id/editIV" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

    </LinearLayout>

</RelativeLayout>